css/style.css
/* ... */
#contact input {
	width: 100%;
}

#contact .inputblock,
#contact .textareablock {
	position: relative;
	display: inline-block;
	margin: 0;
	margin-left: 10px;
	width: calc(50% - 5px);
}

#contact .inputblock:first-child {
	margin-left: 0;
}

#contact .textareablock {
	margin: 0;
	width: 100%;
}

#contact input:focus:invalid,
#contact textarea:focus:invalid {
	border-color: #f00;
}

#contact .error {
	display: none;
	position: absolute;
	top: -38px;
	left: 14px;
	padding: 0px 7px;
	color: #fff;
	font-size: 16px;
	line-height: normal;
	border-radius: 5px;
	background-color: #f00;
	animation: none !important;
	z-index: 100;
	user-select: none;
}

#contact .error::before {
	content: "";
	position: absolute;
	bottom: -5px;
	left: 35px;
	width: 0;
	height: 0;
	border-left: 5px solid transparent;
	border-right: 5px solid transparent;
	border-top: 5px solid #f00;
}

#contact input:focus:invalid + .error,
#contact textarea:focus:invalid + .error {
	display: block;
}

#contact input:focus:valid:not([type="submit"]),
#contact textarea:focus:valid {
	border-color: #0f0;
}

#contact input#captcha,
#contact input[type="submit"] {
	width: 100%;
}

#contact textarea {
	height: 245px;
	resize: none;
}

#contact input:hover,
#contact textarea:hover {
	opacity: 0.75;
}

#contact input:focus,
#contact textarea:focus {
	color: #000;
	background-color: #fff;
}

#contact input[type="checkbox"],
#contact input[type="checkbox"] + label {
	width: auto;
}

#contact input[type="submit"] {
	padding: 17px 17px 15px;
	width: 300px;
	border-radius: 35px;
	cursor: pointer;
}

#contact input[type="submit"]:hover,
#contact input[type="submit"]:focus {
	color: var(--main-color2);
	background-color: var(--main-color1);
}

#mbox form input[type="submit"] {
	margin-top: 20px;
	color: var(--main-color2);
	border-color: var(--main-color1);
	background-color: var(--main-color1);
	cursor: pointer;
}

#mbox form input[type="submit"]:hover,
#mbox form input[type="submit"]:focus {
	color: var(--main-color1);
	background-color: var(--main-color2);
}

#contact .description {
	font-size: 18px;
}

#mbox {
	position: fixed;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
	background-color: #000c;
	z-index: 100;
}

#mbox form {
	background-color: #fff;
	padding: 20px;
	border-radius: 15px;
	font-size: 22px;
}

footer {
	position: relative;
	padding: 12px;
	color: var(--main-color2);
	text-align: center;
	background-color: var(--main-color1);
	z-index: 1;
}

@supports ( -webkit-touch-callout : none) {
	main > header::before {
		position: fixed;
		background-attachment: unset;
	}
}

@media screen and (max-width: 1800px) {
	body > header,
	main > * {
		padding-left: 200px;
		padding-right: 200px;
	}

	#menu {
		right: 200px;
	}
}

@media screen and (max-width: 1150px) {
	html, body {
		font-size: 18px;
	}

	h2 {
		font-size: 32px;
	}

	.bouton:hover {
		color: var(--main-color1);
		background-color: var(--main-color2);
		box-shadow: none;
	}

	body > header,
	main > * {
		padding-left: 20px;
		padding-right: 20px;
	}

	body > header {
		padding: 5px;
		height: 40px;
	}

	header > a:nth-child(1) {
		position: absolute;
		top: 5px;
		left: 5px;
		height: 40px;
		z-index: 12;
	}

	#menu {
		right: 0;
		left: 0;
		padding-top: 50px;
		max-height: 0;
		background-color: transparent;
		transition: max-height .5s, box-shadow .5s;
		overflow: hidden;
		z-index: 11;
	}

	#menu ul {
		background-color: var(--main-color2);
	}

	#nav-mobile {
		display: block;
	}

	#nav-mobile,
	#nav-mobile-close {
		z-index: 12;
	}

	#menu:target {
		max-height: 100vh;
		box-shadow: 0 -3px 12px 10px #0005;
	}

	#menu:target ~ #nav-mobile {
		display: none;
	}

	#menu:target ~ #nav-mobile-close {
		display: block;
	}

	#menu ul li {
		float: none;
		margin: 0;
		padding: 0 10px;
		line-height: 45px;
	}

	#menu a {
		display: block;
	}

	main {
		margin-top: 50px;
		min-height: calc(100vh - 93px);
	}

	main > * {
		scroll-margin-top: 50px;
	}

	main > header {
		height: calc(100svh - 50px);
	}

	main > header > div > div {
		overflow: hidden;
	}

	#services h3 {
		font-size: 28px;
	}

	blockquote h3 {
		font-size: 20px;
	}

	#a-propos .avatar {
		display: block;
		float: none;
		margin: auto;
		max-width: 100%;
	}

	#a-propos .bulle {
		margin-left: 0;
		margin-top: 40px;
	}

	#a-propos .bulle::after {
		top: -25px;
		left: 50%;
		border-width: 0 15px 25px;
		border-color: var(--main-color2) transparent;
		transform: translateX(-50%);
	}

	#contact #rs {
		display: block;
	}

	#contact .jvuf,
	#contact .jvuf svg {
		height: 36px;
	}
}

@media screen and (max-width: 650px) {
	#services ul li {
		padding-left: 0;
		padding-top: 142px;
		background-position: center top;
	}

	#creations ul {
		display: unset;
	}

	#creations ul li {
		display: block;
		width: unset;
		margin-bottom: 25px;
	}
}

